[package]
name = "easytier-ffi"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["c-abi", "ffi-dataplane"]
c-abi = []
ffi-dataplane = [
    "easytier/ffi-dataplane",
    "easytier-core/proxy-smoltcp-stack",
]

[dependencies]
easytier = { path = "../../easytier", features = ["tracing-log"] }
easytier-core = { path = "../../easytier-core" }

once_cell = "1.18.0"
dashmap = "6.0"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "time", "sync", "macros"] }
async-trait = "0.1"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = "1.17.0"
tokio-util = "0.7"
