[package]
name = "easytier-ios"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
easytier = { path = "../../easytier" }

once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = "1.48.0"
tracing = "0.1.44"
tracing-oslog = "0.3.0"
tracing-subscriber = "0.3.22"
