[package]
name = "easytier-ohrs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib"]

[dependencies]
ohos-hilog-binding = {version = "*", features = ["redirect"]}
easytier = { path = "../../easytier" }
napi-derive-ohos = "1.1"
napi-ohos = { version = "1.1", default-features = false, features = [
    "serde-json",
    "latin1",
    "chrono_date",
    "object_indexmap",
    "tokio",
    "async",
    "tokio_rt",
    "tokio_macros",
    "tokio_io_util",
    "deferred_trace",
    "napi8",
    "node_version_detect",
    "web_stream",
] }
once_cell = "1.21.3"
serde_json = "1.0.125"
tracing-subscriber = "0.3.19"
tracing-core = "0.1.33"
tracing = "0.1.41"
uuid = { version = "1.5.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }

[build-dependencies]
napi-build-ohos = "1.1"
[profile.dev]
panic = "unwind"
debug = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
