[package]
name = "easytier-gui"
version = "0.0.0"
description = "EasyTier GUI"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-all", "path-all",
  "process-exit",
  "system-tray",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

easytier = { path = "../../easytier" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4.37", features = ["serde"] }

once_cell = "1.18.0"
dashmap = "5.5.3"

privilege = "0.3"
gethostname = "0.4.3"

auto-launch = "0.5.0"
dunce = "1.0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
